syntax = "proto3";

package example.complex;

option go_package = "proto_demo/proto";

message Dummy{
    int32 Id = 1;
    string name = 2;
}

message Complex{
    Dummy one_dummy = 1;
    repeated Dummy multi_dummy = 2;
}