syntax = "proto3";

package proto_demo;

option go_package = "proto_demo/proto";

enum EyeColor{
    EYE_COLOR_UNSPECIFIED = 0;
    EYE_COLOR_BLUE = 1;
    EYE_COLOR_GREEN = 2;
    EYE_COLOR_BROWN = 3;
}

/*
    Account
    Used to Identify someone in our system
*/
message Account {
    uint32 id = 1;
    string name = 2;
    bytes thumbnail = 3; //picture in .jpg format
    bool is_verified = 4;
    float height = 5; //in centimeter metric

    repeated string phones = 6;

    EyeColor eye_color = 7;
}
